# vmpl-hotcalls

./: CMakeLists.txt  Makefile  Makefile.am  README.md  configure  configure.ac
include/: common.h  config.h  hot_calls.h  hotcalls.h  sgx_defs.h  sgx_spinlock.h
src/: hot_calls_test.c  hotcalls.c  spinlock.c  vmpl_hot_calls_test.c
